--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
+.form-title {
+  display: block;
+  font-family: Ubuntu;
+  font-size: 30px;
+  color: #a27eff;
+  line-height: 1.2;
+  text-transform: uppercase;
   text-align: center;
+  padding-bottom: 49px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.container {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  flex-wrap: wrap;
+  padding: 15px;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper {
+  width: 550px;
+  padding: 50px 0 160px 0;
+}
+.wrap-input {
+  border-radius: 31px;
+  margin-bottom: 16px;
+  position: relative;
+  z-index: 1;
+}
+.form {
+  width: 100%;
+  margin: 0;
+}
+.form-input {
+  position: relative;
+  display: block;
+  width: 480px;
+  border-radius: 31px;
+  font-family: Ubuntu;
+  font-size: 18px;
+  color: #000000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input.form-input {
+  height: 62px;
+  padding: 0 35px;
+}
+
+.container-form-btn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 10px;
+}
+
+.form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  min-width: 150px;
+  height: 62px;
+  background-color: transparent;
+  border-radius: 31px;
+  font-family: Ubuntu;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+
+  transition: all 0.4s;
+  position: relative;
+  z-index: 1;
+}
+
+.form-btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 31px;
+  background-color: #827ffe;
+  pointer-events: none;
+
+  transition: all 0.4s;
+}
+
+.form-btn:hover:before {
+  background-color: #403866;
+  width: calc(100% + 20px);
+}
+
+button {
+  outline: none !important;
+  border: none;
+  background: transparent;
+}
+
+button:hover {
+  cursor: pointer;
 }
