--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,3 @@
-.form-title {
-  display: block;
-  font-family: Ubuntu;
-  font-size: 30px;
-  color: #a27eff;
-  line-height: 1.2;
-  text-transform: uppercase;
-  text-align: center;
-  padding-bottom: 49px;
-}
-
 .container {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,29 +14,67 @@
   width: 550px;
   padding: 50px 0 160px 0;
 }
-.wrap-input {
+
+form {
+  width: 100%;
+  margin: 0;
+}
+
+.form-title {
+  display: block;
+  font-family: Ubuntu;
+  font-size: 30px;
+  color: #a27eff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 49px;
+}
+
+.input-wrap {
+  width: 100%;
   border-radius: 31px;
   margin-bottom: 16px;
   position: relative;
   z-index: 1;
 }
-.form {
-  width: 100%;
-  margin: 0;
-}
+
 .form-input {
   position: relative;
   display: block;
-  width: 480px;
+  width: 100%;
   border-radius: 31px;
   font-family: Ubuntu;
   font-size: 18px;
   color: #000000;
+  height: 62px;
 }
-
-input.form-input {
+input {
   height: 62px;
   padding: 0 35px;
+  border: 0;
+}
+
+select {
+  appearance: none;
+  outline: 0;
+  background: white;
+  background-image: none;
+  height: 62px;
+  cursor: pointer;
+  border: 0;
+  padding: 0 35px;
+  font-size: 18px;
+  font-family: Ubuntu;
+}
+select:required:invalid {
+  color: #666;
+}
+option[value=""][disabled] {
+  display: none;
+}
+option {
+  color: #000;
 }
 
 .container-form-btn {
