--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,29 @@ button:hover {
   cursor: pointer;
 }
 
+.container.success {
+  align-items: flex-start;
+}
+.success-wrap {
+  padding-top: 90px;
+}
+.success-title {
+  display: block;
+  font-family: Ubuntu;
+  font-size: 30px;
+  color: #a27eff;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.return-btn {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 30px 0;
+}
+
 /*------------------------------------------------------------------
 [ Focus Input ]*/
 
