--- a/src/App.css
+++ b/src/App.css
@@ -189,3 +189,29 @@ button:hover {
 .form-input:focus + .focus-input {
   width: calc(100% + 20px);
 }
+
+/*------------------------------------------------------------------
+[ Alert validate ]*/
+
+.alert-validate {
+  position: absolute;
+  z-index: 1000;
+  max-width: 70%;
+  background-color: #fff;
+  border-radius: 14px;
+  padding: 4px 25px 4px 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 10px;
+  pointer-events: none;
+
+  font-family: Ubuntu;
+  color: #c80000;
+  font-size: 13px;
+  line-height: 1.4;
+  text-align: left;
+}
